# dbt-101-jaffle-shop-duckdb

./: .gitignore  Makefile  README.md  profiles.yml  pyproject.toml
models/analytics/: kpis.sql
models/analytics/finance/: kpis_finance.sql
models/core/: core_churned_customers.sql  core_customers.sql  core_expenses.sql  core_orders.sql
models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
tests/: assert_orders_are_dated.sql
